--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
       - name: Run tests with Maven
-        run: mvn -B p1capstoneTest.java --file pom.xml
+        run: mvn -B test --file pom.xml
